assets/css/style.css
/* ... */
.full-rule {
  margin-top: 50px;
  margin-bottom: 50px;
}

.full-rule.thin {
  margin-top: 5px;
  margin-bottom: 5px;
}

.bs-docs-section {
    text-indent: auto;
    hyphens: auto;
}

.cellpadding td {
    padding: 10px;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}


/* NavBar */

.navbar { 
	z-index:100
	font-family: 'Roboto', sans-serif;
}

.navbar-default {
  background-color: #FFFFFF;
  border-color: transparent;
  padding-top: 15px;
}

.navbar-default .navbar-brand {
  color: white;
}

.navbar-default .navbar-nav>li>a {
  color: #3498db;
  font-size: 24px;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  
}

.navbar-toggle {
  background: #fff;
}

.navbar-brand img { 
	max-width: 200px;
	max-height: 35px;
}

.navbar-brand{
	float:left;
	height:50px;
	padding:10px 15px;
	font-size:18px;
	line-height:20px}

/* DropDown*/

.dropdown { 
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
}

.dropdown-toggle { 
	font-weight: 100;
}

.dropdown-menu>li>a { 
	font-weight: 300;
}

.dropdown-submenu {
  position: relative;
}

.dropdown-submenu > .dropdown-menu {
  top: 0;
  left: 100%;
  margin-top: -6px;
  margin-left: -1px;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

.dropdown-submenu:hover > .dropdown-menu {
  display: block;
}

.dropdown-submenu:hover > a:after {
  border-left-color: #fff;
}

.dropdown-submenu.pull-left {
  float: none;
}
.dropdown-submenu.pull-left > .dropdown-menu {
  left: -100%;
  margin-left: 10px;
}


/**************
	Sidebar
**************/

/* side bar */

#sidebar {
    min-width: 300px;
    max-width: 300px;
    color: #fff;
    transition: all 0.3s;
    margin-top: 20px;
}

#sidebar.active {
    margin-left: -250px;
}



.sidebar { 
	width: 300px;
	background-color: #f6f8fa;
	padding-left: 50px;
	padding-top: 20px;
	padding-bottom: 10px;
	padding-right:30px;
	margin-left: 0px;
	font-family: 'Verdana', sans-serif;
}

.sidebar ul { 
	color: #333333;
}

.pb-section-title {
	display: inline-block; 
	font-size:17px;
	padding-bottom: 10px;
	margin-top:5px;
	margin-bottom: 5px; 
	color: #3498db;
}

.pb-section-subtitle {
	font-size:16px;
	padding-bottom: 10px;
	margin-top:5px;
	margin-bottom: 5px; 
}

.pb-nav-item { 
	display:inline-block;
	font-size:14px;
}

.pb-first-item {
	padding-top: 10px;
}

.pb-last-item {
	padding-bottom: 10px;
}

.list-group-item-header { 
	font-weight: 400;
	font-size: 20px;
}

.list-group-item { 
	font-weight: 200;
	margin:0;
	padding: 3px 0 3px 5px;
	border-width:0;
	font-size: 16px;
	background-color: transparent;
}



a.list-group-item:hover,
button.list-group-item:hover,
a.list-group-item:focus,
button.list-group-item:focus {
  color: #555;
  text-decoration: none;
  background-color: #cccccc;
}

.pb_menu_btn { 
	display: none;
	margin-bottom: 5px;
	float:right;
	
}

/*Homepage*/

/* Home Page */

.orangeBG { 
	background-color: #d7731b;
}

.pb_homewrapper {
	float left;
	width:100%;
	position: relative;
}

.pb_homewrapper img { 
	display: block;
	width: 100%;
}

.pb_homewrapper_content { 
	left: 0;
	top: 0;
	padding-top: 130px;
	position: absolute;
	width: 100%;
	height: 100%;
	text-align: center;
	
}

.pb_homewrapper_content h1 { 
	color: #FFFFFF;
	font-size:69px;
	font-family: 'Verdana', sans-serif;
	font-weight:500;
}

.pb_homewrapper_content h2 { 
	color: #FFFFFF;
	font-size:39px;
	font-family: 'Roboto', sans-serif;
	width: 50%;
	margin-right: auto;
	margin-left: auto;
}

.header-links { 
	width: 75%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 40px;
	text-align:center;
	}


.header-links-item {
	float: left; 
	width: 33%;
	text-align:center;
}

.header-links-item img { 
	width: 55%;
	height: 55%;
	margin-left:auto;
	margin-right:auto
}

.header-links-item img.large { 
	width: 60%;
	height: 60%;
	margin-left:auto;
	margin-right:auto;
	margin-top: -50px;
}

.header-links-item p { 
	font-family: 'Verdana', sans-serif;
	font-size:35px;
	color: #FFFFFF;
}

/*===========Benefits===================*/

.pb_benefits { 
					
	background-color: #ffffff; 
	width: 80%; 
	height:800px; 
	padding-bottom: 40px; 
	margin-left: auto; 
	margin-right: auto;
	opacity:.80;
	margin-top:370px;
	
}
	
.pb_benefits_title {
	
	width:100%; 
	height: 15%; 
	padding-top: 20px;
	padding-bottom: 15px; 
	text-align: center; 
	
}
	
.pb_benefits_title h2 { 
	font-family: 'Roboto', sans-serif; 
	font-size: 44px;
	font-weight: 500;
	color: #47547c;
	margin-bottom: 5px;
}
	
	
.pb_benefits_row { 
	width: 100%; 
	height: 42%; 
	margin-left: auto; 
	margin-right: auto;
}

.pb_first_row { 
	margin-top: 20px;
}
	
.pb_benefits_panel { 
	height:100%; 
	float: left;
}
	
.pb_benefits_panel_left { 
	float:left;
	width: 45%;
}
	
.pb_benefits_panel_right { 
	float:right;
	width: 55%;
	padding-right: 5%;
}
	
.pb_benefits_img_wrapper {
	height: 100%;
	width: 25%;
	float: left;
	text-align: right;
	padding-left: 70px;
}
	
.pb_benefits_img_wrapper > img {
	width: 70%;
	height: 70%;
	object-fit: contain;
	margin-top: -40px;
	
}
	
.pb_benefits_content {
	
	width:75%;
	height: 100%;
	float:right; 
	font-weight: 100;
	text-align: left;
	padding-right: 4px;
}
	
.pb_benefits_content > h3 { 
	
	font-family: 'Open Sans Condensed', sans-serif; 
	font-size: 35px;
	font-weight: 400;
	color: #47547c;
}
	
.pb_benefits_content > span { 
	
	font-family: 'Roboto', sans-serif; 
	font-size: 31px;
	font-weight: 100;
	color: #47547c;
}

/************ Carousel ****************/


.pb_home_belowfold_carousel { 
	border-top-left-radius: 12px;
	border-top-right-radius: 12px;
}

.pb_home_belowfold_carousel h1 { 
	
	font-family: 'Roboto', sans-serif; 
	font-size: 54px;
	font-weight: 500;
	color: #ffffff;
	margin-bottom: 5px;
	padding-top: 35px;
	padding-bottom: 10px;
	
}

/*********************************/

.carousel {
  position: relative;
  width: 70%;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}
/* ... */

